--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
-    "ownerNumber": "6285158549166@s.whatsapp.net",
-    "ownerName": "aqulzz",
-    "limitCount": 30,
+    "ownerNumber": "6285705980176@s.whatsapp.net",
+    "ownerName": "SkyclopsZ",
+    "limitCount":15,
     "gamewaktu": 60,
-    "botName": "Xinz Bot",
+    "botName": "SKY BOTZ",
     "pathImg": "./media/Itsuki.jpg",
     "apikey": "YOUR_APIKEY",
-    "fake": "XINZ-BOTZ VERIFIED",
+    "fake": "SKY-BOTZ VERIFIED",
     "sesidInsta": "default",
-    "sessionName": "aqulzz",
-    "txtDonasi": "GOPAY : 085157226383\nTrakteer : https://trakteer.id/aqulzz\nSaweeria : https://saweria.co/aqulzz\nPulsa : 085157226383",
+    "sessionName": "SkyclopsZ",
+    "txtDonasi": "DANA : 085705980176\nTrakteer : Gk punya bang\nSaweeria : Gk punya bang\nPulsa : 085705980176",
     "gcount": {
         "prem": 40,
         "user": 20
